--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@ae-udarag/my-app-for-react-package-test",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "Common UI Components For React Project",
   "author": "Udara Galagedarage",
   "license": "MIT",
   "repository": "git@github.com:ae-udarag/my-app-for-react-package-test.git",
+  "main": "dist/index.js",
+  "module": "dist/index.modern.js",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -13,11 +15,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "microbundle-crl": "0.13.10"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "microbundle-crl --no-compress --format modern,cjs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
